// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test parseQuery compound query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery gender female negative query 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "type": Object {
            "$neq": "Female",
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery gender female query 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "type": "Female",
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery gender unknown query 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "type": Object {
            "$nin": Array [
              "Male",
              "Female",
            ],
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery negative OR query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$not": Object {
              "$elemMatch": Object {
                "group": "Diplomacy",
              },
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery negative array (fullName and alternateNames) query 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "$nor": Array [
            Object {
              "fullName": "John Taylor",
            },
            Object {
              "alternateNames": Object {
                "$elemMatch": Object {
                  "alternateName": "John Taylor",
                },
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery negative query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$not": Object {
              "$elemMatch": Object {
                "group": "Diplomacy",
              },
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Clergy",
            },
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "pursuits": Object {
            "$elemMatch": Object {
              "pursuit": "diplomat",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query AND with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Democracy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query OR with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery query with object 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": "Diplomacy",
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery single query with string - should give fuzzy search 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "occupations": Object {
            "$elemMatch": Object {
              "group": Object {
                "$regex": /Diplomacy/gi,
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates date + negative place 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "travels": Object {
            "$not": Object {
              "$elemMatch": Object {
                "$and": Array [
                  Object {
                    "place": "Genoa",
                  },
                  Object {
                    "$and": Array [
                      Object {
                        "$and": Array [
                          Object {
                            "travelEndYear": Object {
                              "$gte": 1700,
                            },
                          },
                          Object {
                            "travelStartYear": Object {
                              "$lte": 1700,
                            },
                          },
                        ],
                      },
                      Object {
                        "$or": Array [
                          Object {
                            "travelStartMonth": Object {
                              "$exists": false,
                            },
                          },
                          Object {
                            "travelEndMonth": Object {
                              "$exists": false,
                            },
                          },
                          Object {
                            "travelStartMonth": Object {
                              "$eq": 0,
                            },
                          },
                          Object {
                            "travelEndMonth": Object {
                              "$eq": 0,
                            },
                          },
                          Object {
                            "$and": Array [
                              Object {
                                "travelStartMonth": Object {
                                  "$gte": 1,
                                },
                              },
                              Object {
                                "travelEndMonth": Object {
                                  "$lte": 10,
                                },
                              },
                            ],
                          },
                          Object {
                            "$and": Array [
                              Object {
                                "travelStartMonth": Object {
                                  "$lte": 1,
                                },
                              },
                              Object {
                                "travelEndMonth": Object {
                                  "$gte": 1,
                                },
                              },
                            ],
                          },
                          Object {
                            "$and": Array [
                              Object {
                                "travelStartMonth": Object {
                                  "$lte": 10,
                                },
                              },
                              Object {
                                "travelEndMonth": Object {
                                  "$gte": 10,
                                },
                              },
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates date + place 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "place": "Genoa",
                },
                Object {
                  "$and": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1700,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$or": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$exists": false,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$eq": 0,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$eq": 0,
                          },
                        },
                        Object {
                          "$and": Array [
                            Object {
                              "travelStartMonth": Object {
                                "$gte": 1,
                              },
                            },
                            Object {
                              "travelEndMonth": Object {
                                "$lte": 10,
                              },
                            },
                          ],
                        },
                        Object {
                          "$and": Array [
                            Object {
                              "travelStartMonth": Object {
                                "$lte": 1,
                              },
                            },
                            Object {
                              "travelEndMonth": Object {
                                "$gte": 1,
                              },
                            },
                          ],
                        },
                        Object {
                          "$and": Array [
                            Object {
                              "travelStartMonth": Object {
                                "$lte": 10,
                              },
                            },
                            Object {
                              "travelEndMonth": Object {
                                "$gte": 10,
                              },
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates month range + single year 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$lte": 10,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 10,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 10,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates month range + year range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$gte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$lte": 1780,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$gte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$lte": 10,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 10,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 10,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates month range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$lt": NaN,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lt": NaN,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates single month 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$lt": NaN,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": NaN,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 1,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lt": NaN,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$eq": NaN,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 1,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates single year 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates single year and single month 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$and": Array [
                    Object {
                      "travelEndYear": Object {
                        "$gte": 1700,
                      },
                    },
                    Object {
                      "travelStartYear": Object {
                        "$lte": 1700,
                      },
                    },
                  ],
                },
                Object {
                  "$or": Array [
                    Object {
                      "travelStartMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$exists": false,
                      },
                    },
                    Object {
                      "travelStartMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "travelEndMonth": Object {
                        "$eq": 0,
                      },
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": 1700,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$lt": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$eq": 1700,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": 1700,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 5,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 5,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelEndYear": Object {
                            "$gt": 1700,
                          },
                        },
                        Object {
                          "travelStartYear": Object {
                            "$eq": 1700,
                          },
                        },
                        Object {
                          "travelStartMonth": Object {
                            "$lte": 5,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lt": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$eq": 1700,
                          },
                        },
                        Object {
                          "travelEndMonth": Object {
                            "$gte": 5,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with dates year range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "travels": Object {
            "$elemMatch": Object {
              "$and": Array [
                Object {
                  "$or": Array [
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$gte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$lte": 1780,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1700,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1700,
                          },
                        },
                      ],
                    },
                    Object {
                      "$and": Array [
                        Object {
                          "travelStartYear": Object {
                            "$lte": 1780,
                          },
                        },
                        Object {
                          "travelEndYear": Object {
                            "$gte": 1780,
                          },
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          },
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with freeSearch freeSearch query with "and" operator 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with freeSearch freeSearch query with negatives 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$and": Array [
            Object {
              "biography": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\^\\(\\(\\?!\\\\btwo\\\\b\\)\\.\\)\\*\\$/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with freeSearch regular freeSearch query 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\btwo\\\\b/gi,
              },
            },
          ],
        },
        Object {
          "$or": Array [
            Object {
              "biography": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "narrative": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "tours": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
            Object {
              "notes": Object {
                "$regex": /\\\\bthree\\\\b/gi,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with index different start and end with multiple indices + range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "index": Object {
                "$in": Array [
                  1,
                  2,
                  3,
                  4,
                  5,
                  6,
                ],
              },
            },
            Object {
              "index": Object {
                "$in": Array [
                  4,
                  4.1,
                  4.2,
                  4.3,
                  4.4,
                  4.5,
                  4.6,
                  4.7,
                  4.8,
                  4.9,
                  5,
                  5.1,
                  5.2,
                  5.3,
                  5.4,
                  5.5,
                  5.6,
                  5.7,
                  5.8,
                  5.9,
                  6,
                ],
              },
            },
            Object {
              "index": Object {
                "$gte": 1,
                "$lte": 10,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with index multiple indices + range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "index": Object {
                "$in": Array [
                  1,
                  2,
                  3,
                  4,
                  5,
                  6,
                ],
              },
            },
            Object {
              "index": Object {
                "$in": Array [
                  4,
                  4.1,
                  4.2,
                  4.3,
                  4.4,
                  4.5,
                  4.6,
                  4.7,
                  4.8,
                  4.9,
                  5,
                  5.1,
                  5.2,
                  5.3,
                  5.4,
                  5.5,
                  5.6,
                  5.7,
                  5.8,
                  5.9,
                  6,
                ],
              },
            },
            Object {
              "index": Object {
                "$gte": 1,
                "$lte": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with index multiple indices 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "index": Object {
                "$in": Array [
                  1,
                  2,
                  3,
                ],
              },
            },
            Object {
              "index": Object {
                "$in": Array [],
              },
            },
            Object {
              "index": Object {
                "$gte": 1,
                "$lte": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with index range 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "index": Object {
                "$in": Array [
                  1,
                  2,
                  3,
                ],
              },
            },
            Object {
              "index": Object {
                "$in": Array [
                  1,
                  1.1,
                  1.2,
                  1.3,
                  1.4,
                  1.5,
                  1.6,
                  1.7,
                  1.8,
                  1.9,
                  2,
                  2.1,
                  2.2,
                  2.3,
                  2.4,
                  2.5,
                  2.6,
                  2.7,
                  2.8,
                  2.9,
                ],
              },
            },
            Object {
              "index": Object {
                "$gte": 1,
                "$lte": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`test parseQuery with index single index 1`] = `
Object {
  "$and": Array [
    Object {
      "$or": Array [
        Object {
          "$or": Array [
            Object {
              "index": Object {
                "$in": Array [
                  1,
                ],
              },
            },
            Object {
              "index": Object {
                "$in": Array [],
              },
            },
            Object {
              "index": Object {
                "$gte": 1,
                "$lte": 1,
              },
            },
          ],
        },
      ],
    },
  ],
}
`;
